# satacc

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  booksim_main.cpp  xmake.lua
booksim2/: CMakeLists.txt  rng.h  rng_double_wrapper.cpp  rng_wrapper.cpp
config/: config_volta_islip.icnt  satacc_config.toml  satacc_config.txt
gpgpu_intersim/: CMakeLists.txt  batchtrafficmanager.hpp  gputrafficmanager.hpp  icnt_wrapper.cc  icnt_wrapper.cpp  icnt_wrapper.h  interconnect_interface.cpp  local_interconnect.cpp  main.cpp
include/: acc.h  assign_wrap.h  cache_interface.h  clause.h  clause_writer.h  component.h  fmt_types.h  new_intersim_wrapper.h  private_cache.h  ramulator_wrapper.h  read_config.h  req_addr.h  seq.h  sjq_intersim.h  utils.h  watcher.h  watcher_list_write_unit.h
simple_test/: CMakeLists.txt  acctest.cc  potest.cc
src/: Makefile  acc.cc  cache_interface.cc  clause.cc  clause_writer.cc  new_intersim_wrapper.cc  private_cache.cc  ramulator_wrapper.cc  read_config.cc  seq.cc  sjq_intersim.cc  sjq_intersim.cc.old  watcher.cc  watcher_list_write_unit.cc
test/: CMakeLists.txt  DDR4_4Gb_x16_2133_2.ini  Makefile  acc_test.cc  and_test.cc  cache_interface_test.cc  clause_test.cc  dram_sim_test.cc  fmt_test.cc  generate_config.h  intersim_pressure_test.cc  intersim_test.cc  lambda_test.cc  main_test.cc  mem_req_move_test.cc  new_mesh_test.cc  newicnt_test.cc  ramulator_test.cc  rust_test.cc  set_up.h  unique_ptr_test.cc  watcher_clause_test.cc  watcher_test.cc  write_test.cc
test_utils/: CMakeLists.txt  set_up.cc  set_up.h
